--- a/sass_challenges/sass_css/css_challenge2.html
+++ b/sass_challenges/sass_css/css_challenge2.html
@@ -3,7 +3,7 @@
   <head>
 
     <title>Local Community College</title>
-    <link rel="stylesheet" href="./css/styles.css" type="text/css">
+    <link rel="stylesheet" href="./sass/style.css" type="text/css">
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	<link rel="icon" href="favicon.ico" type="image/x-icon">
   </head>
@@ -79,19 +79,6 @@
 
     </aside>
 
-    <!-- <nav>
-
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Finding us</a></li>
-        <li><a href="#">Courses</a></li>
-        <li><a href="#">Staff</a></li>
-        <li><a href="#">Media</a></li>
-        <li><a href="#">Prospectus</a></li>
-      </ul>
-
-    </nav> -->
-
     <footer>
 
       <p><b>&copy; 2016 Local Community College</b></p>
@@ -100,5 +87,3 @@
   </div>
   </body>
 </html>
-
-<!-- AvenirNextLTW01-Regular,Arial,Helvetica,sans-serif; -->
