Css challenge of sass complete

--- a/sass_challenges/sass_css-grids/grid_challenge2.html
+++ b/sass_challenges/sass_css-grids/grid_challenge2.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Academy Webpage Layout</title>
     <!-- This is the link to my css stylesheet -->
-    <link rel="stylesheet" type="text/css" media="screen" href="./css/style.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="./sass/style.css" />
     <!-- This is the link to the font(s) i've used -->
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+    <script src="./js/script.js"></script>
 </head>
 <body>
 
@@ -27,11 +28,11 @@
                 </div>
                 <div class="navbar">
                     <ul>
-                        <li><a href="#home">HOME</a></li>
-                        <li><a href="#japan">JAPANESE CARS</a></li>
-                        <li><a href="#german">GERMAN CARS</a></li>
-                        <li><a href="#iconic">ICONIC CARS</a></li>
-                        <li><a href="#hire">HIRE A CAR</a></li>
+                        <li><a href="#home1" onclick="takeMeHome()">HOME</a></li>
+                        <li><a href="#japan1" onclick="takeMeJapan()">JAPANESE CARS</a></li>
+                        <li><a href="#german1" onclick="takeMeGerman()">GERMAN CARS</a></li>
+                        <li><a href="#iconic1" onclick="takeMeIconic()">ICONIC CARS</a></li>
+                        <li><a href="#hire1" onclick="takeMeHire()">HIRE A CAR</a></li>
                     </ul>
                 </div>
             </div>
