--- a/sass_challenges/sass_html/article_challenge.html
+++ b/sass_challenges/sass_html/article_challenge.html
@@ -2,18 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <title>Sorry, Silicon Valley Won’t Save Your Kids From Tech Addiction</title>
+    <link rel="stylesheet" href="./sass/style.css" type="text/css">
     <style>
-    div.c {
-      font-size: large;
-      margin: 70px;
-    }
-    div.g {
-        color: #a4a4a5;
-    }
-    p{
-      font-family:
-    }
   </style>
   </head>
   <body>
@@ -22,7 +14,7 @@
       <p><small>03.26.18|SECOND SHIFT</small></p>
     </center>
   </div>
-  <div>
+  <div class="theHead">
     <center><h1>Sorry, Silicon Valley Won’t Save Your Kids From Tech Addiction.</h1></center>
   </div>
     <div class="c">
