Header transition added

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 
             <div class="mainHeader">
                 <header>
-                    <h1>Yaseen Davids</h1>
+                    <h1 id="myHeader">Yaseen<span class="inviText">i</span>Davids</h1>
                 </header>
                 <div class="header_slogan">
-                    <h3>Show me the code</h3>
+                    <h3 id="mySlogan">Show<span class="inviText">i</span>me<span class="inviText">i</span>the<span class="inviText">i</span>code</h3>
                 </div>
                 <div class="socialMedia_box"></div>
                 <div class="navbar">
