javascript challenge 14 updated

--- a/js_challenges/challenge_14/index.html
+++ b/js_challenges/challenge_14/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
 
+    <h1>Hi, This is the Alphabet Soup</h1>
+    <h4>Enter a word or phrase into the field below, click submit and see the magic..</h4>
+    <br>
+
     <input id="user_word" name="user_word" placeholder="Enter a word or phrase">
     <button id="Submit">Submit</button>
     <br>
